[legacy mode] grid--noWrap prevents modern browsers from wrapping (not IE8&9)
I've decided that it's best to just let IE8 and 9 wrap. It isn't consistent with modern browsers but it will  make the content more accessible on IE 8 & 9.

--- a/grid-classes.scss
+++ b/grid-classes.scss
@@ -248,7 +248,7 @@ $fullPrefix: if($grid-prefix != '', $grid-prefix+'-', '');
 	}
 	//disables wrapping at all screen widths
 	&--noWrap {
-		flex-wrap: nowrap;
+		flex-wrap: if($grid-legacy-support, nowrap !important, nowrap);
 	}
 
 	//quick access to space-between and space-around
